# django-template

./: .dockerignore  .env.example  LICENSE  README.md  _debug.ipynb  docker-compose.yml  pyproject.toml
.docker/app/: Dockerfile  entrypoint.sh
.github/workflows/: template.yml
app/: settings.py  settings_dev.py  urls.py
app/utils/: colored_logger.py  staticfiles_storage.py
core/: backends.py
core/mixins/: users_permissions.py
core/models/: __init__.py  roles.py  user.py
