[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Denis Verbin <d@verbin.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
python-decouple = "^3.6"
sentry-sdk = "^1.11.1"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
jupyter = "^1.0.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
