[tool.poetry]
name = "django-template"
version = "0.2.0"
description = ""
authors = ["Denis Verbin <d@verbin.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
python-decouple = "^3.8"
sentry-sdk = "^1.31.0"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
jupyter = "^1.0.0"
ipython = "^8.6.0"
notebook = "=6.5.5"
traitlets = "=5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
